fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,11 +48,19 @@
 }
 
 .success-bg-color {
-    background-color: #34D399 !important;
+    background-color: #10B981 !important;
+}
+
+.success-bg-color:hover {
+    background-color: #059669 !important;
 }
 
 .error-bg-color {
     background-color: #EF4444 !important;
+}
+
+.error-bg-color:hover {
+    background-color: #DC2626 !important;
 }
 
 .card-wrapper {
